--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "chai-bignumber": "^2.0.2",
         "lite-server": "^2.6.1",
         "nodemon": "^2.0.15",
-        "truffle": "^5.4.29",
+        "truffle": "^3.0.6",
         "@truffle/contract": "4.4.4",
-        "web3": "1.6.1"
+        "web3": "^0.20.6"
       }
   }
